Fix cost warning UI miss-aligned.

--- a/src/react/components/pages/editorPage/canvasCommandBar.scss
+++ b/src/react/components/pages/editorPage/canvasCommandBar.scss
@@ -13,6 +13,7 @@
 
 .cost-warning-message .ms-ContextualMenu-linkContent {
     display: grid;
+    grid-template-columns: 24px auto;
     grid-template-rows: 24px 8px;
     grid-template-areas:
         "icon text"
@@ -32,4 +33,5 @@
     color: darkorange;
     font-size: 8px;
     padding-left: 4px;
+    text-align: left;
 }
